--- a/app/views/application/_overlays.html.erb
+++ b/app/views/application/_overlays.html.erb
@@ -58,3 +58,155 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<div id="mysore-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          Dailly 6:30 to 20:30 after 30 min each
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <div id="mandya-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          trow Badarahalli</br>
+          Dailly 6:30 to 20:30 after 30 min each 
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <div id="thumukur-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          trow Nagamangala</br>
+          5:45, 6:35, 7:00, 7:30, 8:00, 8:15, 8:40, 9:00, 9:10, 9:30, 10:00, 10:30, 11:00, 11:15, 11:30, 11:45, 12:00, 12:15, 12:30, 12:50, 13:10, 13:30, 14:00, 14:50, 15:00, 15:15, 15:45, 16:00, 16:30, 17:00, 17:35, 18:00, 18:45
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <div id="pete-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          trow helekere</br>
+          Dailly 6:15 to 21:30 after 40min each
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+   <div id="thuruvekere-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          trow Nagamangala</br>
+          12:30, 13:05, 14:05, 14:15, 18:45.
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+   <div id="chikka-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          7:15, 7:40, 8:40.
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <div id="shivamogga-popup" class="modal fade">
+    <div class="modal-dialog custom-modal-position">
+      <div class="modal-content">
+        <div class="custom-modal-header">
+        <button type="button" class="close no-print" data-dismiss="modal" aria-hidden="true">
+                                  <img src="/assets/close_icon.png" />
+                              </button>
+            <!-- <img src="/assets/intaroy-logo-150.png" /> -->
+          <!-- <h4 class="modal-title">Modal title</h4> -->
+        </div>
+        <div class="modal-body custom-modal-content">
+          trow helekere</br>
+          Dailly 6:15 to 21:30 after 40min each
+        </div>
+        <div class="custom-modal-footer">
+          <a href="#" data-dismiss="modal" class="btn btn-normal btn-size-fix ">No</a>
+          <a href="#"  id="documentdeleteanchor" class="btn btn-normal btn-size-fix" data-method="delete">Yes</a>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
