--- a/app/views/home_page/about_us.html.erb
+++ b/app/views/home_page/about_us.html.erb
@@ -1,19 +1,21 @@
 <div class="navbar-wrapper">
+<%= render :partial => "header"%>
 	<div class="container" style="background:#eee; height: 700px">
-	<h1>Namma Pandavapura</h1>
-    <div class="header-border border_position"></div>
+        <h2>About Pandavapura</h2>
+	<!-- <h1>Namma Pandavapura</h1> -->
     <div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
-    		Home
-    	</a>
+        <a class="btn btn-primary" href="/" type="cancel">
+            Home
+        </a>
     </div>
-	<h2>About Pandavapura</h2></br>
+    <div class="header-border border_position"></div>
 	<h4><u>History</u></h4>
 	<p>The name 'Pandavapura' means "Town of Pandavas". Mythology states that the Pandavas during their period of exile stayed here for sometime, and Kunti, mother of the Pandavas, liked the hillock so much that it became one of her favorite haunts. The town is also named after the Pandavas because of their brief stay in this region. The name "French Rock" dates back to India's Pre-Independence days, the place was used as the camping ground by the French army, which came to help Tippu Sultan in his war against the British. It is believed that French named the small town as "French Rocks", as the town is in the vicinity of two rocky hills. After Indian Independence these rocky hills called as "Kunti Betta" by locals.</br>
     Pandavapura is approximately 130 km from Bangalore and 25 km from Mysore.</p>
     <h4><u>About the Town</u></h4>
     <p>Pandavapura town is surrounded by beautiful paddy and sugar cane fields. Agriculture is the main occupation around the town. The town is surrounded by many villages and the town is central point for farmers everyday business. Every Thursday, a farmer's market (called as "Santhe" in Kannada) is held in the heart of the town, where farmers directly sell their agricultural products. Apart from agricultural products, you can also find handicrafts, ayurvedic products etc.,. Surrounding villages have Jaggery manufacturing units and it is a nice experience to watch the process of making Jaggery out of sugar cane. The Visweswarayya Canal (VC Canal) flows in the heart of the town, by dividing the town into two halves. The water for this canal is sourced from the Krishnaraja Sagar (KRS), which is Reservoir across the river Cauvery.</p>
     <h4><u>Transport</u></h4>
-    <p>Pandavapur is well connected by trains and buses. Most of the trains which run between Bangalore and Mysore stop in Pandavapur. The Pandavapur railway station is 4 km away from the Pandavapur town, and auto rickshaws and buses are available for Pandavapur town. There are very few direct buses runs from Bangalore to Pandavapur. However travelers from Bangalore, can reach Mandya town by bus, and change for a Pandavpura bus in the Mandya KSRTC bus stand. Train is the best and easiest mode of transportation for Pandavapur from Bangalore. The current MLA (Member of Legislative Assembly) is <a href="http://www.puttannaiah.com/en/about-2/"> <strong>K S Puttannaiah</strong></a> from Karnataka Sarvodaya Paksha.[3]</p>
+    <p>Pandavapur is well connected by trains and buses. Most of the trains which run between Bangalore and Mysore stop in Pandavapur. The Pandavapur railway station is 4 km away from the Pandavapur town, and auto rickshaws and buses are available for Pandavapur town. There are very few direct buses runs from Bangalore to Pandavapur. However travelers from Bangalore, can reach Mandya town by bus, and change for a Pandavpura bus in the Mandya KSRTC bus stand. Train is the best and easiest mode of transportation for Pandavapur from Bangalore. The current MLA (Member of Legislative Assembly) is <a href="http://www.puttannaiah.com/en/about-2/"> <strong>K S Puttannaiah</strong></a> from Karnataka Sarvodaya Paksha.[3]</p></br>
+    <%= render :partial => 'footer' %></br></br>
 	</div>
 	</div>
