--- a/app/views/home_page/contact.html.erb
+++ b/app/views/home_page/contact.html.erb
@@ -1,11 +1,13 @@
+<%= render :partial => "header"%>
 <div class="container container-min-height" id="content" style="background:#eee; height: 700px">
-<h1>Namma Pandavapura</h1>
-    <div class="header-border border_position"></div>
+<!-- <h1>Namma Pandavapura</h1> -->
+<h2>Contact Us </h2>
     <div class="new_villade_position">
       <a class="btn btn-primary" href="/" type="cancel">
         Home
       </a>
     </div>
+    <div class="header-border border_position"></div>
   <div class="row contact-margin">
     <div class="col-lg-4 col-sm-3 col-md-3">
           <h4><strong>Find Us</strong></h4></br>
@@ -46,5 +48,6 @@
       <% end %>
     </div>
     <div class="col-lg-4 col-sm-3 col-md-3"></div>
-  </div>
+  </div></br>
+    <%= render :partial => 'footer' %></br></br>
 </div>
