--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -1,19 +1,21 @@
+<%= render :partial => "header"%>
 <div class="container" style="background:#eee; height: 1000px">
-<h1>Namma Pandavapura</h1>
-    <div class="header-border border_position"></div>
+<!-- <h1>Namma Pandavapura</h1> -->
     <%# if current_user.has_role? :admin %>
 	<!-- <div class="creat_school_btn">
 		<a class="btn btn-primary" href="/hospitals/new" type="submit">
 			Create New Hospital
 		</a>
 	</div> -->
+	<h2>List of Hospital</h2>
 	<div class="new_villade_position">
     	<a class="btn btn-primary" href="/" type="cancel">
     		Home
     	</a>
     </div>
+    <div class="header-border border_position"></div>
 	<%# end %>
-	<h2>List of Hospital</h2>
+	
 	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
@@ -42,9 +44,10 @@
 			<% end %>
 		</tbody>
 	</table>
-	<a class="btn btn-primary" href="/" type="cancel">
+	<div><a class="btn btn-primary" href="/" type="cancel">
 		Back
-	</a>
+	</a></div></br>
 	<!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
     </a> -->
+    <%= render :partial => 'footer' %></br></br>
 </div>
