--- a/app/views/mysoretrains/_index_form.html.erb
+++ b/app/views/mysoretrains/_index_form.html.erb
@@ -3,7 +3,7 @@
 			Create New Hospital
 		</a>
 	</div> -->
-<h2>List of Trains towards Mysore</h2>
+<h2>Towards Mysore</h2>
 		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
