--- a/app/views/mysoretrains/index.html.erb
+++ b/app/views/mysoretrains/index.html.erb
@@ -3,6 +3,6 @@
     <div class="header-border border_position"></div>
     <%= render :partial => "index_form"%>
     
-    </div>
-
+    </div></br>
+<%= render :partial => 'footer' %></br></br>
 </div>
