--- a/app/views/schools/_index_form.html.erb
+++ b/app/views/schools/_index_form.html.erb
@@ -1,10 +1,4 @@
-	<div class="new_villade_position">
-    	<a class="btn btn-primary" href="/" type="cancel">
-    		Home
-    	</a>
-    </div>
-	<%# end %>
-	<h2>List of Schools in City</h2>
+
 	<table class="table table-striped table-hover">
 		<thead>
 			<tr>
@@ -33,8 +27,9 @@
 			<%# end %>
 		</tbody>
 	</table>
-	<a class="btn btn-primary" href="/" type="cancel">
+	<div><a class="btn btn-primary" href="/" type="cancel">
 		Back
-	</a>
+	</a></div></br>
 	<!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
     </a> -->
+<%= render :partial => 'footer' %></br></br>
