--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -1,17 +1,19 @@
+<%= render :partial => "header"%>
 <div class="container" style="background:#eee; height: 1000px">
-<h1>Namma Pandavapura</h1>
-    <div class="header-border border_position"></div>
+<!-- <h1>Namma Pandavapura</h1> -->
     <%# if current_user.has_role? :admin %>
 	<!-- <div class="creat_school_btn">
 		<a class="btn btn-primary" href="/trains/new" type="submit">
 			Create New Hospital
 		</a>
 	</div> -->
+	<h2>List of Trains</h2>
 	<div class="new_villade_position">
     	<a class="btn btn-primary" href="/" type="cancel">
     		Home
     	</a>
     </div>
+    <div class="header-border border_position"></div>
 	<%# end %>
 	<ul class="nav nav-tabs" id="myTab">
         <li class="active">
@@ -24,7 +26,7 @@
         </ul>
     <div class="testing_ajax">
     	
-		<h2>List of Trains towards Bangalure</h2>
+		<h2>Towards Bangalure</h2>
 		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
@@ -64,6 +66,6 @@
 		</a>
 		<!-- <a onclick="javascript:print(); return false;" href="#" class="btn btn-primary"><span class=""></span>&nbsp;Print
 	    </a> -->
-    </div>
-
+    </div></br>
+<%= render :partial => 'footer' %></br></br>
 </div>
